crates/cpg-schema/tests/snapshots/contracts__modeled_exception_sites.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table modeled_exception_sites
family findings
key snapshot_id, call_site_node_id, pysa_fact_id, model_id, rule_id
@lctx.family=findings
@lctx.table=modeled_exception_sites
snapshot_id: FixedSizeBinary(16) NOT NULL
call_site_node_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NULL
call_fact_id: FixedSizeBinary(16) NOT NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
target_node_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
rule_id: FixedSizeBinary(16) NOT NULL
target_definition_fact_id: FixedSizeBinary(16) NOT NULL
class: Utf8 NOT NULL
class_node_id: FixedSizeBinary(16) NOT NULL
class_fact_id: FixedSizeBinary(16) NOT NULL
action: Int16 NOT NULL [lctx.codebook=model_exception_action]
to_class: Utf8 NULL
to_class_node_id: FixedSizeBinary(16) NULL
to_class_fact_id: FixedSizeBinary(16) NULL
target_modality: Int16 NOT NULL [lctx.codebook=modality]
model_modality: Int16 NOT NULL [lctx.codebook=modality]
candidate_set_complete_under_model: Boolean NOT NULL
has_unresolved_remainder: Boolean NOT NULL
origin: Int16 NOT NULL [lctx.codebook=origin]
