crates/cpg-schema/tests/snapshots/contracts__modeled_transfer_sites.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table modeled_transfer_sites
family findings
key snapshot_id, call_site_node_id, pysa_fact_id, model_id, rule_id
@lctx.family=findings
@lctx.table=modeled_transfer_sites
snapshot_id: FixedSizeBinary(16) NOT NULL
call_site_node_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NULL
call_fact_id: FixedSizeBinary(16) NOT NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
target_node_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
rule_id: FixedSizeBinary(16) NOT NULL
target_definition_fact_id: FixedSizeBinary(16) NOT NULL
input_path_id: FixedSizeBinary(16) NOT NULL
input_path_kind: Int16 NOT NULL [lctx.codebook=model_path_kind]
input_expression_node_id: FixedSizeBinary(16) NULL
input_expression_fact_id: FixedSizeBinary(16) NULL
input_status: Int16 NOT NULL [lctx.codebook=model_transfer_endpoint_status]
input_reason: Int16 NULL [lctx.codebook=boundary_reason]
output_path_id: FixedSizeBinary(16) NOT NULL
output_path_kind: Int16 NOT NULL [lctx.codebook=model_path_kind]
output_expression_node_id: FixedSizeBinary(16) NULL
output_expression_fact_id: FixedSizeBinary(16) NULL
output_status: Int16 NOT NULL [lctx.codebook=model_transfer_endpoint_status]
output_reason: Int16 NULL [lctx.codebook=boundary_reason]
transfer: Int16 NOT NULL [lctx.codebook=model_transfer_kind]
target_modality: Int16 NOT NULL [lctx.codebook=modality]
model_modality: Int16 NOT NULL [lctx.codebook=modality]
candidate_set_complete_under_model: Boolean NOT NULL
has_unresolved_remainder: Boolean NOT NULL
origin: Int16 NOT NULL [lctx.codebook=origin]
