crates/cpg-schema/tests/snapshots/contracts__operation_facet_status.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table operation_facet_status
family findings
key snapshot_id, node_id, facet
@lctx.family=findings
@lctx.table=operation_facet_status
snapshot_id: FixedSizeBinary(16) NOT NULL
node_id: FixedSizeBinary(16) NOT NULL
facet: Int16 NOT NULL [lctx.codebook=operation_facet]
verdict: Int16 NOT NULL [lctx.codebook=verdict]
reason: Utf8 NULL
